# example

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CMakeLists.txt  Makefile  README.md  copier.yml  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_79ca877d095de9b6ddea2a5bad3f89b9.html  dir_79ca877d095de9b6ddea2a5bad3f89b9.js  dir_85ed8a4450a930818357c658cced572d.html  dir_85ed8a4450a930818357c658cced572d.js  dir_e931c1a3f0014e624d0645a271726ad2.html  dir_e931c1a3f0014e624d0645a271726ad2.js  example.html  files.html  globals.html  globals_func.html  hello_8cpp.html  hello_8cpp.js  index.html  name_8cpp.html  name_8hpp.html  name_8hpp.js  name_8hpp_source.html  name_8test_8cpp.html  name_8test_8cpp.js  namespaceexample.html  namespacemembers.html  namespacemembers_func.html  namespaces.html  namespaces_dup.js  navtreedata.js  navtreeindex0.js  pyproject.toml  renovate.json
docs/: Doxyfile
template/: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakeLists.txt.jinja  Makefile  Makefile.jinja  README.md  README.md.jinja  [[[_copier_conf.answers_file]]].jinja  [[[project_slug]]].org.jinja  [[project_slug]].org  pyproject.toml  vcpkg.json.jinja
template/.github/: dependabot.yml
template/.github/workflows/: ci_tests.yml  pre-commit-check.yml  pre-commit-update.yml
template/docs/: Doxyfile  Doxyfile.jinja
template/installtest/: CMakeLists.txt  CMakeLists.txt.jinja  test.cpp  test.cpp.jinja
template/src/[[[include_prefix]]]/: CMakeLists.txt.jinja
template/src/[[[include_prefix]]]/[[[namespace]]]/: CMakeLists.txt.jinja  [[[library_name]]].cpp.jinja  [[[library_name]]].hpp.jinja  [[[library_name]]].test.cpp.jinja
template/src/[[include_prefix]]/: CMakeLists.txt
template/src/[[include_prefix]]/[[namespace]]/: CMakeLists.txt  [[library_name]].cpp  [[library_name]].hpp  (+1 more)
template/src/examples/: CMakeLists.txt  CMakeLists.txt.jinja  hello.cpp  hello.cpp.jinja
(+22 files in other folders)
